[package]
name = "pulsar-smith"
version = "0.1.0"
authors = ["Yang Yang <yyang@streamnative.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pulsar = "4.1"
# pulsar = { path = "../pulsar-rs" }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.8.4"
log = "0.4"
toml = "0.5"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.59"
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.1"
async-trait = "0.1.51"
