[package]
name = "pulsar-smith"
version = "0.1.0"
authors = ["Yang Yang <yyang@streamnative.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pulsar = "4.2.0"
#pulsar = { path = "../pulsar-rs" }
tokio = { version = "1.0", features = ["full"] }
async-channel = "1.6.1"
rand = "0.8.4"
env_logger = "0.8.4"
log = "0.4"
toml = "0.5"
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.59"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.0"
oauth2 = "4.1"
async-trait = "0.1.51"
rustyline = "9.1.0"
chrono = "0.4.19"
prometheus-client = "0.19.0"
actix-web = "4"
governor = "0.5.1"
